--- a/style1.css
+++ b/style1.css
@@ -1,10 +1,18 @@
+/*Set box-sizing*/
 * {
     box-sizing: border-box;
 
 }
+/*All links Primary Blue*/
+* a{
+    color: #007FB0;
+}
+
 body{
     margin: 0;
     font-family: sans-serif;
+    display: grid;
+    min-height: 100vh;
 }
 header{
     display: flex;
@@ -12,14 +20,17 @@ header{
     width: 100%;
     background-color: #be1622;
 }
+/*footer styling*/
 .footer {
     display: flex;
     flex-wrap: wrap;
     position: sticky;
     padding: 0;
     width: 100%;
+    height: 100%;
     background-color: #345;
     color: ghostwhite;
+    min-height: 100%;
     margin-bottom: 0;
 }
 .footerText{
@@ -40,13 +51,12 @@ header{
 }
 .footerText a{
     display: block;
-    color: #007fb0;
     font-size: small;
 }
 .heading{
     font-size: x-large;
 }
-
+/*header banner*/
 .logo{
     padding: 1em;
     flex:20%;
@@ -65,6 +75,7 @@ header{
     margin-right: 1em;
     margin-left: auto;
 }
+/*navigation list*/
 .navList{
     text-align:left;
     font-size: 1.2em;
@@ -82,6 +93,7 @@ header{
     list-style-type: none;
     margin-right: auto;
     }
+
 .menuList {
     width: 1.5em;
     height: 5px;
@@ -89,7 +101,8 @@ header{
     margin-top: 5px;
     display: none;
 }
-#button{
+/*creating burger menu*/
+#burgerButton{
     background: transparent;
     border: none;
     margin:0;
@@ -97,6 +110,7 @@ header{
     width:25px;
     height:45px;
 }
+/*hidden navigation list*/
 #hiddenMenu{
     background-color: #577A9B;
     display: flex;
@@ -123,6 +137,7 @@ header{
 .hiddenList a:hover{
     color:slategray;
 }
+/*home page videos*/
 .video{
     max-width: 100%;
     margin: auto;
@@ -151,6 +166,7 @@ h2{
 }
 
 /*Products styling*/
+/*return to top*/
 #return {
     border-style: solid;
     text-align: center;
@@ -166,13 +182,13 @@ h2{
     color: ghostwhite;
     text-decoration: none;
 }
+/*all products*/
 .clothes{
     display: grid;
     flex-wrap: wrap;
     grid-template-columns: 250px 250px 250px;
     justify-content: center;
 }
-
 .image{
     margin: 1.0em;
     border: 1px solid #C7CBDA;
@@ -186,9 +202,6 @@ h2{
     padding: 10px 5px 0 5px;
     height: 400px;
 }
-.productText a{
-    color: #007fb0;
-}
 .description{
     max-width: 250px;
     font-size: medium;
@@ -196,14 +209,20 @@ h2{
 .productText p{
     text-align: left;
 }
+/*add to cart button*/
 .buyButton{
     display: flex;
     justify-content: center;
     padding-bottom: 10px;
 }
+.buyButton button{
+    max-height: 20px;
+    max-width: 40px;
+}
 .productText button{
     width: 50px;
 }
+/*jump menu links*/
 #jumpMenu{
     display: flex;
     flex-wrap: wrap;
@@ -211,8 +230,8 @@ h2{
 }
 #jumpMenu a{
     padding: 1.0em;
-    color: #007FB0;
 }
+
 /*Read more styling*/
 #object {
     display: flex;
@@ -235,7 +254,40 @@ h2{
     font-size: xx-large;
 }
 
-/*Smaller screens*/
+/*Cart styling*/
+.cartHeader{
+   padding-left: 20%;
+}
+#cartText{
+    margin-left: 25%;
+    margin-bottom: 3.0em;
+    display: grid;
+    grid-template-columns:250px 250px;
+    font-weight: bold;
+}
+#cartDescription{
+    font-weight: bold;
+}
+#products{
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: 100px 100px 400px 50px 50px;
+    margin-left: 25%;
+}
+.individualProducts{
+    margin-bottom: 5.0em;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/*clear cart link*/
+#clearCart {
+    max-width: 100px;
+    margin-left: 25%;
+    padding-bottom: 5.0em;
+}
+
+/*Smaller screen resizing*/
 @media screen and (max-width: 900px) {
     .myNav .navList
     {
@@ -283,9 +335,30 @@ h2{
         font-size: medium;
         padding: 0;
     }
+    .cartHeader{
+        padding-left: 15%;
+    }
+    #cartText{
+        margin-left: 15%;
+        margin-bottom: 3.0em;
+        display: grid;
+        grid-template-columns:150px 150px ;
+    }
+    #cartText span{
+        margin-left: 20%;
+    }
+    #products{
+        display: grid;
+        flex-wrap: wrap;
+        grid-template-columns: 75px 75px 275px 25px 50px;
+        margin-left: 15%;
+    }
+    #clearCart{
+        margin-left: 15%;
+    }
 
 }
-/*Even smaller screens*/
+/*Even smaller screen resizing*/
 @media screen and (max-width: 600px) {
     .clothes {
         grid-template-columns: 250px;
@@ -301,6 +374,27 @@ h2{
     }
     .sessionProductText{
         max-width: 320px;
+    }
+    #cartText{
+        margin-left: 0;
+        margin-bottom: 3.0em;
+        display: grid;
+        grid-template-columns:100px 100px ;
+    }
+    .cartHeader{
+        padding-left: 0;
+    }
+    #cartDescription{
+        font-size: small;
+        }
+    #products{
+        display: grid;
+        flex-wrap: wrap;
+        grid-template-columns: 25px 75px 125px 50px 10px;
+        margin-left: 0;
+    }
+    #clearCart{
+        margin-left: 0;
     }
 }
 
